--- a/project2/styles.css
+++ b/project2/styles.css
@@ -1,7 +1,50 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
   font-family: sans-serif;
   padding: 20px;
+}
+
+nav {
+  margin: 0;
+  width: 100%;
+  height: 60px;
+  justify-content: space-around;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+nav div {
+  background-color: bisque;
+  margin: 0;
+  padding: 15px;
+  overflow: hidden;
+}
+
+nav ul {
+  list-style: none;
+  display: inline;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+nav li {
+  display: inline;
+  margin-right: 20px;
+  filter: drop-shadow(9px 5px 10px rgba(0, 0, 0, 0.5));
 }
 
 h1 {
