--- a/project1/styles.css
+++ b/project1/styles.css
@@ -40,3 +40,23 @@ nav li {
   margin-right: 20px;
   filter: drop-shadow(9px 5px 10px rgba(0, 0, 0, 0.5));
 }
+
+.nav-link {
+  color: black;
+  border-radius: 15px;
+  background-color: white;
+  padding: 7px;
+  text-decoration: none;
+}
+
+.nav-link:visited {
+  color: darkgray;
+}
+
+.nav-link:hover {
+  color: brown;
+}
+
+.nav-link:active {
+  color: brown;
+}
