--- a/project3/styles.css
+++ b/project3/styles.css
@@ -42,3 +42,58 @@ h1 {
   background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
   box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
 }
+
+nav {
+  overflow-x: auto;
+  white-space: nowrap;
+  margin: 0;
+  width: 100%;
+  height: 60px;
+  justify-content: space-around;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+nav div {
+  background-color: bisque;
+  margin: 0;
+  padding: 15px;
+  overflow: hidden;
+}
+
+nav ul {
+  list-style: none;
+  display: inline;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+nav li {
+  display: inline;
+  margin-right: 20px;
+  filter: drop-shadow(9px 5px 10px rgba(0, 0, 0, 0.5));
+}
+
+.nav-link {
+  color: black;
+  border-radius: 15px;
+  background-color: white;
+  padding: 7px;
+  text-decoration: none;
+}
+
+.nav-link:visited {
+  color: darkgray;
+}
+
+.nav-link:hover {
+  color: brown;
+}
+
+.nav-link:active {
+  color: brown;
+}
