--- a/project3/styles.css
+++ b/project3/styles.css
@@ -1,3 +1,13 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 h1 {
   text-align: center;
 }
