--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ a {
 }
 
 a:visited {
-  color: darkgray;
+  color: black;
 }
 
 a:hover {
@@ -100,5 +100,25 @@ a:hover {
 }
 
 a:active {
+  color: brown;
+}
+
+.nav-link {
+  color: black;
+  border-radius: 15px;
+  background-color: white;
+  padding: 7px;
+  text-decoration: none;
+}
+
+.nav-link:visited {
+  color: black;
+}
+
+.nav-link:hover {
+  color: brown;
+}
+
+.nav-link:active {
   color: brown;
 }
