--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,19 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  text-align: center;
 }
 
-header {
-  margin: 16px;
+.heading {
+  font-size: clamp(2rem, calc(8vw + 1rem), 5rem);
+}
+
+header h1 {
+  margin: 1.7rem auto 1rem;
 }
 
 main {
+  font-size: 1.3rem;
   margin: 8px;
   color: sienna;
 }
@@ -29,6 +35,7 @@ nav {
   left: 0;
   z-index: 1000;
   font-family: Monospace;
+
 }
 
 nav div {
@@ -41,7 +48,6 @@ nav div {
 nav ul {
   list-style: none;
   display: inline;
-  gap: 10px;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -60,24 +66,32 @@ section {
 h3 {
   color: white;
 }
-.one {
-  border: 3px solid sienna;
-  width: 400px;
-  text-align: center;
+
+article {
+  margin: 1rem auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
+
+article section {
+  width: 29%;
+}
+
 section div {
-  width: 300px;
   margin: 10px;
   border: 3px dotted white;
   border-radius: 15px;
-  padding: 7px;
+  padding: min(7px, 2%);
   background-color: black;
+  margin: 1rem auto;
 }
 
 section ul {
   list-style: none;
   padding: 0;
   margin: 10px 0 0 0;
+  font-size: clamp(1rem, calc(3vw + 1rem), 0.5rem);
 }
 
 section li {
@@ -86,7 +100,7 @@ section li {
 
 a {
   color: black;
-  border-radius: 15px;
+  box-sizing: border-box;
   background-color: white;
   padding: 7px;
   text-decoration: none;
@@ -123,3 +137,31 @@ a:active {
 .nav-link:active {
   color: brown;
 }
+/* Mobile */
+@media (max-width: 576px) {
+  article {
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+/* Tablets (Portrait) */
+@media (min-width: 577px) and (max-width: 768px) {
+  article {
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+/* Tablets (Landscape) */
+@media (min-width: 769px) and (max-width: 992px) {}
+
+/* Laptops */
+@media (min-width: 993px) and (max-width: 1200px) { ... }
+
+/* Desktops and Large Screens */
+@media (min-width: 1201px) { ... }
