--- a/project10/styles.css
+++ b/project10/styles.css
@@ -59,10 +59,6 @@ ul li {
 
 /* Tablets (Portrait) */
 @media (min-width: 577px) and (max-width: 768px) {
-  html,
-  body {
-    font-size: 20px;
-  }
   
   img {
     width: 100%;
@@ -92,13 +88,8 @@ ul li {
 }
 
 /* Laptops */
-@media (min-width: 993px) and (max-width: 1200px) {html,
-  html,
-  body {
-    font-size: 20px;
-  }
-  
-  img {
+@media (min-width: 993px) and (max-width: 1200px) {
+    img {
     width: 50%;
     height: auto;
   }
@@ -111,10 +102,6 @@ ul li {
 
 /* Desktops and Large Screens */
 @media (min-width: 1201px) {html,
-  body {
-    font-size: 25px;
-  }
-  
   img {
     width: 50%;
     height: auto;
