--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
   padding-top: 20px;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
   text-align: center;
   font-family: "Open Sans",Sans-Serif;
   font-size: 16px;
@@ -13,6 +12,7 @@ body {
 
 .heading {
   font-size: clamp(2rem, calc(8vw + 1rem), 5rem);
+  color: black;
 }
 
 .pixel {
@@ -65,28 +65,28 @@ nav li {
   filter: drop-shadow(9px 5px 10px rgba(0, 0, 0, 0.5));
 }
 
-section {
-  text-align: center;
+h2 {
+  font-size: clamp(1.8rem, calc(10vw+1rem), 5rem);
 }
 
 h3 {
   color: white;
 }
 
-article {
+.rwd {
   margin: 1rem auto;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  
+  align-content: center;
 }
 
-article section {
+.rwd section {
   width: 80%;
+  text-align: center;
 }
 
 section div {
-  margin: 10px;
   border: 3px dotted white;
   border-radius: 15px;
   padding: 1vw;
@@ -98,11 +98,11 @@ section ul {
   list-style: none;
   padding: 0;
   margin: 10px auto 0;
-  font-size: clamp(0.2rem, calc(1vw + 1rem), 1rem);
 }
 
 section li {
   margin: 25px auto;
+  font-size: clamp(0.2rem, calc(1vw + 1rem), 1rem);
 }
 
 a {
@@ -146,7 +146,7 @@ a:active {
 }
 /* Mobile */
 @media (max-width: 576px) {
-  article {
+  .rwd {
     margin: 1rem auto;
     display: flex;
     flex-direction: column;
@@ -156,19 +156,10 @@ a:active {
 
 /* Tablets (Portrait) */
 @media (min-width: 577px) and (max-width: 768px) {
-  article {
+  .rwd {
     margin: 1rem auto;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 }
-
-/* Tablets (Landscape) */
-@media (min-width: 769px) and (max-width: 992px) {}
-
-/* Laptops */
-@media (min-width: 993px) and (max-width: 1200px) { ... }
-
-/* Desktops and Large Screens */
-@media (min-width: 1201px) { ... }
