--- a/project14/styles.css
+++ b/project14/styles.css
@@ -1,3 +1,9 @@
+@media (prefers-reduced-motion: no-preference) {
+  * {
+    scroll-behavior: smooth;
+  }
+}
+
 *,
 ::after,
 ::before {
@@ -108,6 +114,10 @@ a {
 
 
 @media (min-width: 577px) {
+  nav {
+    border-right: 1px #41644A solid;;
+  }
+
   nav ul,
   nav ol {
     margin: 0;
@@ -117,6 +127,7 @@ a {
     padding: 10px;
     border-top: 1px #41644A solid;
     display: block;
+    text-decoration: none;
   }
   
   .main {
